--- a/main/components/category-grid/index.wxss
+++ b/main/components/category-grid/index.wxss
@@ -1,1 +1,35 @@
 /* components/category-grid/index.wxss */
+
+.container{
+  height:320rpx;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
+}
+
+.inner-container{
+  width:730rpx;
+  height: 300rpx;
+  border: 1px dashed #DCEBE6;
+}
+
+.grid-item {
+  width: 200rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.img{
+  width:60rpx;
+  height:60rpx;
+}
+
+.text{
+  margin-top: 6rpx;
+  font-size: 24rpx;
+  color: #333333;
+}
