--- a/main/components/spu-scroll/index.wxss
+++ b/main/components/spu-scroll/index.wxss
@@ -1,1 +1,58 @@
 /* components/spu-scroll.wxss */
+
+.container{
+  box-sizing: border-box;
+  width: 100%;
+  padding: 42rpx 0 34rpx 28rpx;
+  background-color: #ffffff;
+}
+
+.title {
+  width: 692rpx;
+  height: 90rpx;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.price-unit{
+  font-size:24rpx !important;
+  color: #157658 !important;
+}
+
+.price-value{
+  font-size:26rpx !important;
+  color: #157658 !important;
+}
+
+.scroll-view{
+  margin-top:28rpx;
+  display:flex;
+  flex-direction:row;
+}
+
+.inner{
+  display:flex;
+  flex-direction:row;
+}
+
+.spu-container{
+  margin-right:60rpx;
+  display:flex;
+  flex-direction:column;
+  align-items: center;
+}
+
+.spu-text{
+  font-size: 20rpx;
+  color: #666666;
+  margin-top:20rpx;
+  /*width: 150rpx;*/
+  /*overflow: hidden;*/
+  /*text-overflow:ellipsis;*/
+  /*white-space: nowrap;*/
+}
+
+.spu-img{
+  width: 160rpx;
+  height: 160rpx;
+}
