--- a/main/pages/home/home.wxml
+++ b/main/pages/home/home.wxml
@@ -20,7 +20,7 @@
 
   <s-spu-scroll 
       wx:if="true" 
-      theme="{{themeE}}"
+      theme="{{themesE}}"
       spu-list="{{themesSpu}}"
   ></s-spu-scroll>
 
