--- a/main/components/fence/index.wxml
+++ b/main/components/fence/index.wxml
@@ -2,7 +2,12 @@
 
 <view class="container">
 
-    <view class="title"></view>
-    <view></view>
+    <view class="title">{{fence.title}}</view>
+    <view class="row-container">
+        <block wx:for="{{fence.cells}}" wx:key="index">
+            <s-cell class="cell" cell="{{item}}"></s-cell>
+        </block>
+        <view class="hr"></view>
+    </view>
 
 </view>
