完成选择和反选

--- a/main/components/cell/index.wxml
+++ b/main/components/cell/index.wxml
@@ -1,8 +1,29 @@
 <!--components/cell/index.wxml-->
-<view class="container">
+<view bind:tap="onTap" class="container {{c.statusStyle(cell.status).outer}}">
 
-    <view class="inner-container">
+    <view class="inner-container  {{c.statusStyle(cell.status).inner}}">
         <text>{{cell.title}}</text>
     </view>
 
 </view>
+
+<wxs module="c">
+
+function statusStyle (status) {
+    if (status === "forbidden") {
+        return {
+            outer: "forbidden",
+            inner: ""
+        }
+    }
+    if (status === "selected") {
+        return {
+            outer: "s-outer",
+            inner: "s-inner"
+        }
+    }
+}
+
+module.exports.statusStyle = statusStyle;
+
+</wxs>
