--- a/main/components/fence/index.wxml
+++ b/main/components/fence/index.wxml
@@ -5,7 +5,7 @@
     <view class="title">{{fence.title}}</view>
     <view class="row-container">
         <block wx:for="{{fence.cells}}" wx:key="index">
-            <s-cell class="cell" cell="{{item}}"></s-cell>
+            <s-cell x="{{x}}"  y="{{index}}" class="cell" cell="{{item}}"></s-cell>
         </block>
         <view class="hr"></view>
     </view>
