增加部分对sku样式的处理

--- a/main/components/realm/index.wxml
+++ b/main/components/realm/index.wxml
@@ -1,7 +1,7 @@
 <!--components/realm/index.wxml-->
 <wxs src="../../wxs/price.wxs" module="p"></wxs>
 <view class="container">
-   <view class="inner-container">
+   <view class="">
     <view class="sku-preview">
     <image class="sku-img" src="{{previewImg}}"></image>
     <view class="sku-description">
