对选择器逻辑的处理

--- a/main/components/ counter/index.wxml
+++ b/main/components/ counter/index.wxml
@@ -6,6 +6,7 @@
            count = "{{count}}"
            min = "{{min}}"
            max = "{{max}}"
+           bind:linout="onOverStep"
 >
 
 </l-counter>
