--- a/main/pages/detail/detail.wxml
+++ b/main/pages/detail/detail.wxml
@@ -1,7 +1,7 @@
 <!--pages/home/detail/detail.wxml-->
 
   <l-popup content-align="bottom" show="{{showRealm}}">
-    <s-realm spu="{{spu}}"></s-realm>
+    <s-realm order-way="{{orderWay}}" spu="{{spu}}"></s-realm>
   </l-popup>
 <s-tab-bar class="tabbar"
           cart-item-count="{{cartItemCount}}"
