完成sku部分细节问题

--- a/main/components/cell/index.wxml
+++ b/main/components/cell/index.wxml
@@ -1,10 +1,9 @@
 <!--components/cell/index.wxml-->
 <view bind:tap="onTap" class="container {{c.statusStyle(cell.status).outer}}">
-
     <view class="inner-container  {{c.statusStyle(cell.status).inner}}">
+        <image src="{{cell.skuImg}}" mode="aspectFit" class="img" wx:if="{{cell.skuImg}}"></image>
         <text>{{cell.title}}</text>
     </view>
-
 </view>
 
 <wxs module="c">
