--- a/main/pages/category/category.wxss
+++ b/main/pages/category/category.wxss
@@ -1,1 +1,72 @@
 /* pages/category/category.wxss */
+
+/* pages/category/category.wxss */
+
+page{
+  background-color: #ffffff;
+}
+
+.container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.search-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.search-btn{
+  background-color: #f1f1f1 !important;
+  color: #C4C9D2 !important;
+  font-size: 24rpx !important;
+  font-weight: 400 !important;
+  border-radius: 4rpx !important;
+}
+
+.segment-item-active {
+  color: #157658 !important;
+  font-size: 26rpx !important;
+}
+
+.segment-item {
+  color: #666666 !important;
+  background-color: #ffffff !important;
+  font-size: 26rpx !important;
+}
+
+.l-seg-line{
+  width: 8rpx !important;
+  height: 40rpx !important;
+  background-color: #157658 !important;
+  border-radius: 0 !important;
+}
+
+.main {
+  margin-top: 20rpx;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border-top: 2rpx solid #f3f3f3;
+}
+
+.right {
+  width:588rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-left: 2rpx solid #f3f3f3;
+}
+
+::-webkit-scrollbar{
+  width: 0;
+  height: 0;
+  color: transparent;
+}
+
+
+
+
