--- a/main/pages/search/search.wxml
+++ b/main/pages/search/search.wxml
@@ -1,2 +1,126 @@
 <!--pages/search/search.wxml-->
-<text>pages/search/search.wxml</text>
+
+2
+3
+4
+5
+6
+7
+8
+9
+10
+11
+12
+13
+14
+15
+16
+17
+18
+19
+20
+21
+22
+23
+24
+25
+26
+27
+28
+29
+30
+31
+32
+33
+34
+35
+36
+37
+38
+39
+40
+41
+42
+43
+44
+45
+46
+47
+48
+49
+50
+51
+52
+53
+54
+55
+56
+57
+58
+59
+60
+61
+62
+63
+<view class="header">
+    <l-search-bar
+            l-class="input"
+            maxlength="9"
+            bg-color="#f1f1f1"
+            bind:linconfirm="onSearch"
+            bind:lincancel="onCancel"
+            placeholder="输入商品名称">
+    </l-search-bar>
+</view>
+
+<view class="container">
+    <view wx:if="{{!search}}">
+        <view wx:if="{{historyTags.length !==0 }}" class="history-container">
+            <view class="history-title">
+                <view class="slide"></view>
+                <text>历史搜索</text>
+                <view style="flex:1"></view>
+                <view bind:tap="onDeleteHistory" class="icon">
+                    <l-icon name="delete" color="#999999" size="32"></l-icon>
+                </view>
+            </view>
+            <view class="history-tags">
+                <block wx:for="{{historyTags}}" wx:key="index">
+                    <l-tag bind:lintap="onSearch"
+                           l-class="tag" name="{{item}}">
+                        {{item}}
+                    </l-tag>
+                </block>
+            </view>
+        </view>
+        <view class="history-container">
+            <view class="history-title">
+                <view class="slide"></view>
+                <text>热门搜索</text>
+                <view style="flex:1"></view>
+            </view>
+            <view class="history-tags">
+                <block wx:for="{{hotTags}}" wx:key="index">
+                    <l-tag bind:lintap="onSearch"
+                           select="{{item.highlight}}" l-class="tag" l-select-class="tag-selected"
+                           name="{{item.title}}">
+                        {{item.title}}
+                    </l-tag>
+                </block>
+            </view>
+        </view>
+    </view>
+    <view wx:else>
+        <l-loadmore show end-text="- 7七月作品 -" type="{{loadingType}}" loading-text="努力加载中...">
+            <view slot="content" hidden="{{!search}}" class="spu-bottom">
+                <block wx:for="{{items}}">
+                    <s-spu-preview-r data="{{item}}"></s-spu-preview-r>
+                </block>
+            </view>
+        </l-loadmore>
+    </view>
+
+    <l-loading></l-loading>
+    <!--    <l-status-show full-screen="{{false}}" show></l-status-show>-->
+</view>
+
