--- a/main/pages/search/search.wxml
+++ b/main/pages/search/search.wxml
@@ -1,67 +1,4 @@
 <!--pages/search/search.wxml-->
-
-2
-3
-4
-5
-6
-7
-8
-9
-10
-11
-12
-13
-14
-15
-16
-17
-18
-19
-20
-21
-22
-23
-24
-25
-26
-27
-28
-29
-30
-31
-32
-33
-34
-35
-36
-37
-38
-39
-40
-41
-42
-43
-44
-45
-46
-47
-48
-49
-50
-51
-52
-53
-54
-55
-56
-57
-58
-59
-60
-61
-62
-63
 <view class="header">
     <l-search-bar
             l-class="input"
@@ -111,7 +48,7 @@
         </view>
     </view>
     <view wx:else>
-        <l-loadmore show end-text="- 7七月作品 -" type="{{loadingType}}" loading-text="努力加载中...">
+        <l-loadmore show end-text="底部文字提示呀" type="{{loadingType}}" loading-text="努力加载中...">
             <view slot="content" hidden="{{!search}}" class="spu-bottom">
                 <block wx:for="{{items}}">
                     <s-spu-preview-r data="{{item}}"></s-spu-preview-r>
