增加我的页面的基本结构

--- a/main/components/my-banner/index.wxml
+++ b/main/components/my-banner/index.wxml
@@ -1,13 +1,16 @@
-<!--pages/my/my.wxml-->
+<!--components/my-banner/index.wxml-->
 <view class="container">
-    <!-- <s-my-banner coupon-count="{{couponCount}}"></s-my-banner> -->
+    <s-my-banner coupon-count="{{couponCount}}"></s-my-banner>
 
     <view class="main-container">
-        <!-- <s-my-order-panel></s-my-order-panel> -->
+        <s-my-order-panel></s-my-order-panel>
+
         <view class="list">
             <l-list bind:lintap="onGotoMyOrder" icon="order1" l-icon-class="sleeve-order" l-class-content="list-item" title="全部订单"></l-list>
             <l-list bind:lintap="onGotoMyCoupon" icon="coupon" l-icon-class="sleeve-coupon" l-class-content="list-item" title="优惠券"></l-list>
             <l-list bind:lintap="onMgrAddress" icon="address2" l-icon-class="sleeve-address" l-class-content="list-item" title="收货地址"></l-list>
+                        <l-list bind:lintap="onGotoLinUI" icon="sunny1" l-icon-class="sleeve-sunny" l-right-class="right-desc" right-desc="`风袖`使用LinUI组件库构建" l-class-content="list-item" title="LinUI"></l-list>
+            <l-list bind:lintap="onGotoMyCourse" icon="flower" l-class="no-line" l-icon-class="sleeve-flower" l-right-class="right-desc" right-desc="学习开发`风袖`" l-class-content="list-item" title="课程"></l-list>
         </view>
 
     </view>
@@ -18,7 +21,7 @@
           title-color="#157658"
           bind:linconfirm="onDialogConfirm"
           show="{{showDialog}}"
-          content="请先授权此小程序获取您的收货地址"
+          content="请先授权《风袖》获取您的收货地址"
           title="授权">
 
 </l-dialog>
